adding card data

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -13,7 +13,7 @@ body {
 }
 
 #mainbox {
-    background-color: rgba(55, 44, 88, 0.8);
+    background-color: #372c58cc;
     width: 50vw;
     min-width: 300px;
     border-radius: 12px;
@@ -33,7 +33,7 @@ h2 {
 }
 
 .pull-btn {
-    background-color: rgba(72, 210, 194, 1);
+    background-color: #48d2c2;
     color: #2C2838;
     padding: 10px;
     width: 250px;
